--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Vincent Harlius
 description: Machine Learning Engineer
 theme: jekyll-theme-minimal
-logo: NewIm.jpg
+logo: pfp.jpg
 
 # These variables must match the names used in the HTML file above
 email: "lvharlius.vh74@gmail.com"
